--- a/0_data_cleaning.ipynb
+++ b/0_data_cleaning.ipynb
@@ -374,7 +374,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Not all the features are important. Some features contain the same information (\"Location\", for instance, is equivalent to the combination of \"Latitude\" and \"Longitude\". Some columns are dropped to make the following step \"lighter\" and improve lisibility."
+        "Not all the features are important. Some features contain the same information (\"Location\", for instance, is equivalent to the combination of \"Latitude\" and \"Longitude\". Some columns are dropped to make the following step \"lighter\" and improve readability."
       ]
     },
     {
