--- a/0_data_cleaning.ipynb
+++ b/0_data_cleaning.ipynb
@@ -692,7 +692,7 @@
       "source": [
         "Below, rows for which there is a missing value with regards to \"License #\", \"Zip\", \"Risk\", \"Inspection type\", \"Latitude\", \"Longitude\" are dropped.\n",
         "\n",
-        "For violations the NaN are ketp as is because the \"Violations\" fields are often empty for restaurants that passed the inspection."
+        "For violations the NaN are kept as is because the \"Violations\" fields are often empty for restaurants that passed the inspection."
       ]
     },
     {
