--- a/code/3_prediction.ipynb
+++ b/code/3_prediction.ipynb
@@ -12,7 +12,297 @@
       "name": "python3",
       "display_name": "Python 3"
     },
-    "accelerator": "GPU"
+    "accelerator": "GPU",
+    "widgets": {
+      "application/vnd.jupyter.widget-state+json": {
+        "b1bf2f5bdbc749cabe57c8d47cef5e85": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "VBoxModel",
+          "state": {
+            "_view_name": "VBoxView",
+            "_dom_classes": [
+              "widget-interact"
+            ],
+            "_model_name": "VBoxModel",
+            "_view_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_view_count": null,
+            "_view_module_version": "1.5.0",
+            "box_style": "",
+            "layout": "IPY_MODEL_04a7609a4f6044f19ab18372375e9537",
+            "_model_module": "@jupyter-widgets/controls",
+            "children": [
+              "IPY_MODEL_7d4c9201f6ad45f0bb565579d5814b7e",
+              "IPY_MODEL_4a42a5d4b7324949a3ac88d9b91d0cd6",
+              "IPY_MODEL_890bb8eabf984cd093dff716ed94b07f"
+            ]
+          }
+        },
+        "04a7609a4f6044f19ab18372375e9537": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "state": {
+            "_view_name": "LayoutView",
+            "grid_template_rows": null,
+            "right": null,
+            "justify_content": null,
+            "_view_module": "@jupyter-widgets/base",
+            "overflow": null,
+            "_model_module_version": "1.2.0",
+            "_view_count": null,
+            "flex_flow": null,
+            "width": null,
+            "min_width": null,
+            "border": null,
+            "align_items": null,
+            "bottom": null,
+            "_model_module": "@jupyter-widgets/base",
+            "top": null,
+            "grid_column": null,
+            "overflow_y": null,
+            "overflow_x": null,
+            "grid_auto_flow": null,
+            "grid_area": null,
+            "grid_template_columns": null,
+            "flex": null,
+            "_model_name": "LayoutModel",
+            "justify_items": null,
+            "grid_row": null,
+            "max_height": null,
+            "align_content": null,
+            "visibility": null,
+            "align_self": null,
+            "height": null,
+            "min_height": null,
+            "padding": null,
+            "grid_auto_rows": null,
+            "grid_gap": null,
+            "max_width": null,
+            "order": null,
+            "_view_module_version": "1.2.0",
+            "grid_template_areas": null,
+            "object_position": null,
+            "object_fit": null,
+            "grid_auto_columns": null,
+            "margin": null,
+            "display": null,
+            "left": null
+          }
+        },
+        "7d4c9201f6ad45f0bb565579d5814b7e": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "DropdownModel",
+          "state": {
+            "_options_labels": [
+              "Latitude",
+              "Longitude",
+              "LenViol",
+              "TMAX",
+              "MeanMaxTemp3Days",
+              "DaysInBusiness"
+            ],
+            "_view_name": "DropdownView",
+            "style": "IPY_MODEL_3196d98fad0a44c39212bdc03f5a1622",
+            "_dom_classes": [],
+            "description": "column",
+            "_model_name": "DropdownModel",
+            "index": 0,
+            "_view_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_view_count": null,
+            "disabled": false,
+            "_view_module_version": "1.5.0",
+            "description_tooltip": null,
+            "_model_module": "@jupyter-widgets/controls",
+            "layout": "IPY_MODEL_4bedd9f13d8d4e8786c9e56cb1699859"
+          }
+        },
+        "4a42a5d4b7324949a3ac88d9b91d0cd6": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "FloatSliderModel",
+          "state": {
+            "_view_name": "FloatSliderView",
+            "style": "IPY_MODEL_c77f56e1476f4bc09053265fc329e75f",
+            "_dom_classes": [],
+            "description": "x",
+            "step": 0.1,
+            "_model_name": "FloatSliderModel",
+            "orientation": "horizontal",
+            "max": 1,
+            "_view_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "value": 0,
+            "_view_count": null,
+            "disabled": false,
+            "_view_module_version": "1.5.0",
+            "min": -1,
+            "continuous_update": true,
+            "readout_format": ".2f",
+            "description_tooltip": null,
+            "readout": true,
+            "_model_module": "@jupyter-widgets/controls",
+            "layout": "IPY_MODEL_eff9164a5a70464f8657f12efaf8bca6"
+          }
+        },
+        "890bb8eabf984cd093dff716ed94b07f": {
+          "model_module": "@jupyter-widgets/output",
+          "model_name": "OutputModel",
+          "state": {
+            "_view_name": "OutputView",
+            "msg_id": "",
+            "_dom_classes": [],
+            "_model_name": "OutputModel",
+            "outputs": [
+              {
+                "output_type": "display_data",
+                "metadata": {
+                  "tags": []
+                },
+                "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Latitude</th>\n      <th>Longitude</th>\n      <th>LenViol</th>\n      <th>TMAX</th>\n      <th>MeanMaxTemp3Days</th>\n      <th>DaysInBusiness</th>\n      <th>Facility Type</th>\n      <th>Risk</th>\n      <th>Inspection Type</th>\n      <th>Year</th>\n      <th>Month</th>\n      <th>Weekday</th>\n      <th>Results</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.825140</td>\n      <td>0.340931</td>\n      <td>-0.497765</td>\n      <td>0.795768</td>\n      <td>0.319428</td>\n      <td>-0.143341</td>\n      <td>restaurant</td>\n      <td>Risk 1 (High)</td>\n      <td>canvass</td>\n      <td>2010</td>\n      <td>4</td>\n      <td>1</td>\n      <td>Pass</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0.825140</td>\n      <td>0.340931</td>\n      <td>-1.005143</td>\n      <td>0.795768</td>\n      <td>0.319428</td>\n      <td>-0.143341</td>\n      <td>restaurant</td>\n      <td>Risk 2 (Medium)</td>\n      <td>canvass</td>\n      <td>2010</td>\n      <td>4</td>\n      <td>1</td>\n      <td>Pass</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0.825140</td>\n      <td>0.340931</td>\n      <td>-1.005143</td>\n      <td>0.795768</td>\n      <td>0.319428</td>\n      <td>-0.143341</td>\n      <td>restaurant</td>\n      <td>Risk 2 (Medium)</td>\n      <td>canvass</td>\n      <td>2010</td>\n      <td>4</td>\n      <td>1</td>\n      <td>Pass</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0.825140</td>\n      <td>0.340931</td>\n      <td>-1.005143</td>\n      <td>0.795768</td>\n      <td>0.319428</td>\n      <td>-0.143341</td>\n      <td>restaurant</td>\n      <td>Risk 2 (Medium)</td>\n      <td>canvass</td>\n      <td>2010</td>\n      <td>4</td>\n      <td>1</td>\n      <td>Pass</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0.825140</td>\n      <td>0.340931</td>\n      <td>-0.530809</td>\n      <td>0.795768</td>\n      <td>0.319428</td>\n      <td>-0.143341</td>\n      <td>restaurant</td>\n      <td>Risk 2 (Medium)</td>\n      <td>canvass</td>\n      <td>2010</td>\n      <td>4</td>\n      <td>1</td>\n      <td>Pass</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>122585</th>\n      <td>0.074113</td>\n      <td>0.780228</td>\n      <td>-0.631005</td>\n      <td>1.028715</td>\n      <td>0.948841</td>\n      <td>-1.192042</td>\n      <td>restaurant</td>\n      <td>Risk 2 (Medium)</td>\n      <td>license</td>\n      <td>2016</td>\n      <td>8</td>\n      <td>0</td>\n      <td>Pass</td>\n    </tr>\n    <tr>\n      <th>122589</th>\n      <td>0.131956</td>\n      <td>0.788262</td>\n      <td>-1.005143</td>\n      <td>0.649098</td>\n      <td>0.382071</td>\n      <td>-1.166711</td>\n      <td>restaurant</td>\n      <td>Risk 1 (High)</td>\n      <td>task force liquor 1475</td>\n      <td>2010</td>\n      <td>9</td>\n      <td>3</td>\n      <td>Pass</td>\n    </tr>\n    <tr>\n      <th>122590</th>\n      <td>0.331995</td>\n      <td>0.061945</td>\n      <td>-0.369855</td>\n      <td>-0.170531</td>\n      <td>-0.462117</td>\n      <td>-1.176281</td>\n      <td>restaurant</td>\n      <td>Risk 1 (High)</td>\n      <td>license</td>\n      <td>2017</td>\n      <td>5</td>\n      <td>0</td>\n      <td>Pass</td>\n    </tr>\n    <tr>\n      <th>122591</th>\n      <td>0.848029</td>\n      <td>0.473533</td>\n      <td>-1.005143</td>\n      <td>-1.645864</td>\n      <td>-1.947651</td>\n      <td>-1.183599</td>\n      <td>grocery store</td>\n      <td>Risk 2 (Medium)</td>\n      <td>license</td>\n      <td>2014</td>\n      <td>3</td>\n      <td>1</td>\n      <td>Pass</td>\n    </tr>\n    <tr>\n      <th>122593</th>\n      <td>0.716426</td>\n      <td>0.652046</td>\n      <td>-1.005143</td>\n      <td>-0.455245</td>\n      <td>-1.169088</td>\n      <td>-1.187539</td>\n      <td>grocery store</td>\n      <td>Risk 3 (Low)</td>\n      <td>license</td>\n      <td>2015</td>\n      <td>3</td>\n      <td>0</td>\n      <td>Pass</td>\n    </tr>\n  </tbody>\n</table>\n<p>72673 rows × 13 columns</p>\n</div>",
+                "text/plain": "        Latitude  Longitude   LenViol      TMAX  ...  Year  Month Weekday Results\n0       0.825140   0.340931 -0.497765  0.795768  ...  2010      4       1    Pass\n1       0.825140   0.340931 -1.005143  0.795768  ...  2010      4       1    Pass\n2       0.825140   0.340931 -1.005143  0.795768  ...  2010      4       1    Pass\n3       0.825140   0.340931 -1.005143  0.795768  ...  2010      4       1    Pass\n4       0.825140   0.340931 -0.530809  0.795768  ...  2010      4       1    Pass\n...          ...        ...       ...       ...  ...   ...    ...     ...     ...\n122585  0.074113   0.780228 -0.631005  1.028715  ...  2016      8       0    Pass\n122589  0.131956   0.788262 -1.005143  0.649098  ...  2010      9       3    Pass\n122590  0.331995   0.061945 -0.369855 -0.170531  ...  2017      5       0    Pass\n122591  0.848029   0.473533 -1.005143 -1.645864  ...  2014      3       1    Pass\n122593  0.716426   0.652046 -1.005143 -0.455245  ...  2015      3       0    Pass\n\n[72673 rows x 13 columns]"
+              }
+            ],
+            "_view_module": "@jupyter-widgets/output",
+            "_model_module_version": "1.0.0",
+            "_view_count": null,
+            "_view_module_version": "1.0.0",
+            "layout": "IPY_MODEL_9ae89364ff11468c93785bee34cd3b13",
+            "_model_module": "@jupyter-widgets/output"
+          }
+        },
+        "3196d98fad0a44c39212bdc03f5a1622": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "DescriptionStyleModel",
+          "state": {
+            "_view_name": "StyleView",
+            "_model_name": "DescriptionStyleModel",
+            "description_width": "",
+            "_view_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.5.0",
+            "_view_count": null,
+            "_view_module_version": "1.2.0",
+            "_model_module": "@jupyter-widgets/controls"
+          }
+        },
+        "4bedd9f13d8d4e8786c9e56cb1699859": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "state": {
+            "_view_name": "LayoutView",
+            "grid_template_rows": null,
+            "right": null,
+            "justify_content": null,
+            "_view_module": "@jupyter-widgets/base",
+            "overflow": null,
+            "_model_module_version": "1.2.0",
+            "_view_count": null,
+            "flex_flow": null,
+            "width": null,
+            "min_width": null,
+            "border": null,
+            "align_items": null,
+            "bottom": null,
+            "_model_module": "@jupyter-widgets/base",
+            "top": null,
+            "grid_column": null,
+            "overflow_y": null,
+            "overflow_x": null,
+            "grid_auto_flow": null,
+            "grid_area": null,
+            "grid_template_columns": null,
+            "flex": null,
+            "_model_name": "LayoutModel",
+            "justify_items": null,
+            "grid_row": null,
+            "max_height": null,
+            "align_content": null,
+            "visibility": null,
+            "align_self": null,
+            "height": null,
+            "min_height": null,
+            "padding": null,
+            "grid_auto_rows": null,
+            "grid_gap": null,
+            "max_width": null,
+            "order": null,
+            "_view_module_version": "1.2.0",
+            "grid_template_areas": null,
+            "object_position": null,
+            "object_fit": null,
+            "grid_auto_columns": null,
+            "margin": null,
+            "display": null,
+            "left": null
+          }
+        },
+        "c77f56e1476f4bc09053265fc329e75f": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "SliderStyleModel",
+          "state": {
+            "_view_name": "StyleView",
+            "handle_color": null,
+            "_model_name": "SliderStyleModel",
+            "description_width": "",
+            "_view_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.5.0",
+            "_view_count": null,
+            "_view_module_version": "1.2.0",
+            "_model_module": "@jupyter-widgets/controls"
+          }
+        },
+        "eff9164a5a70464f8657f12efaf8bca6": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "state": {
+            "_view_name": "LayoutView",
+            "grid_template_rows": null,
+            "right": null,
+            "justify_content": null,
+            "_view_module": "@jupyter-widgets/base",
+            "overflow": null,
+            "_model_module_version": "1.2.0",
+            "_view_count": null,
+            "flex_flow": null,
+            "width": null,
+            "min_width": null,
+            "border": null,
+            "align_items": null,
+            "bottom": null,
+            "_model_module": "@jupyter-widgets/base",
+            "top": null,
+            "grid_column": null,
+            "overflow_y": null,
+            "overflow_x": null,
+            "grid_auto_flow": null,
+            "grid_area": null,
+            "grid_template_columns": null,
+            "flex": null,
+            "_model_name": "LayoutModel",
+            "justify_items": null,
+            "grid_row": null,
+            "max_height": null,
+            "align_content": null,
+            "visibility": null,
+            "align_self": null,
+            "height": null,
+            "min_height": null,
+            "padding": null,
+            "grid_auto_rows": null,
+            "grid_gap": null,
+            "max_width": null,
+            "order": null,
+            "_view_module_version": "1.2.0",
+            "grid_template_areas": null,
+            "object_position": null,
+            "object_fit": null,
+            "grid_auto_columns": null,
+            "margin": null,
+            "display": null,
+            "left": null
+          }
+        }
+      }
+    }
   },
   "cells": [
     {
@@ -368,6 +658,57 @@
             "tags": []
           },
           "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "y2jY67ztyF5D",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 670,
+          "referenced_widgets": [
+            "b1bf2f5bdbc749cabe57c8d47cef5e85",
+            "04a7609a4f6044f19ab18372375e9537",
+            "7d4c9201f6ad45f0bb565579d5814b7e",
+            "4a42a5d4b7324949a3ac88d9b91d0cd6",
+            "890bb8eabf984cd093dff716ed94b07f",
+            "3196d98fad0a44c39212bdc03f5a1622",
+            "4bedd9f13d8d4e8786c9e56cb1699859",
+            "c77f56e1476f4bc09053265fc329e75f",
+            "eff9164a5a70464f8657f12efaf8bca6"
+          ]
+        },
+        "outputId": "eab8a7cc-71a7-4b9d-dd05-ebe19cb8b9ce"
+      },
+      "source": [
+        "# Filter the continuous variables using ipywidgets (interactive methods to view the dataset)\n",
+        "import ipywidgets as widgets\n",
+        "from ipywidgets import interact, interact_manual\n",
+        "\n",
+        "@interact\n",
+        "def show_articles_more_than(column=[\"Latitude\", \"Longitude\", \"LenViol\", \"TMAX\", \"MeanMaxTemp3Days\", \"DaysInBusiness\"], x=(-1,1,0.1)):\n",
+        "    return df_prep.loc[df_prep[column] > x]"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "b1bf2f5bdbc749cabe57c8d47cef5e85",
+              "version_minor": 0,
+              "version_major": 2
+            },
+            "text/plain": [
+              "interactive(children=(Dropdown(description='column', options=('Latitude', 'Longitude', 'LenViol', 'TMAX', 'Mea…"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
         }
       ]
     },
