--- a/code/3_prediction.ipynb
+++ b/code/3_prediction.ipynb
@@ -2047,6 +2047,99 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "io65Veo13YuB",
+        "colab_type": "text"
+      },
+      "source": [
+        "### 2.9 Neural Network"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U7o3aQLh130U",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 711
+        },
+        "outputId": "8fb64154-2fb7-47a5-b2a1-516a336dd927"
+      },
+      "source": [
+        "from tensorflow import keras\n",
+        "\n",
+        "X_train=np.array(X_train)\n",
+        "X_test=np.array(X_test)\n",
+        "Y_train=np.array(Y_train)\n",
+        "Y_test=np.array(Y_test)\n",
+        "# Neural network using Keras\n",
+        "model = keras.Sequential()\n",
+        "a=keras.optimizers.Adam(lr=0.001, beta_1=0.9, beta_2=0.999,amsgrad=False)\n",
+        "model.add(keras.layers.Dense(10, activation='relu'))\n",
+        "model.add(keras.layers.Dense(5, activation='relu'))\n",
+        "model.add(keras.layers.Dense(2, activation='relu'))\n",
+        "model.add(keras.layers.Dense(1, activation='sigmoid'))\n",
+        "model.compile(loss='binary_crossentropy', optimizer=a, metrics=['accuracy'])\n",
+        "com = model.fit(X_train,Y_train,epochs=10,verbose=True,validation_data=(X_test, Y_test),batch_size=20)\n",
+        "print(model.summary())\n",
+        "loss, accuracy = model.evaluate(X_train,Y_train, verbose=False)\n",
+        "print(\"Training Accuracy:  {:.3f}\".format(round(accuracy,3)))\n",
+        "loss, accuracy = model.evaluate(X_test,Y_test, verbose=False)\n",
+        "print(\"Testing Accuracy:  {:.3f}\".format(round(accuracy,3)))"
+      ],
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Train on 48230 samples, validate on 24519 samples\n",
+            "Epoch 1/10\n",
+            "48230/48230 [==============================] - 13s 274us/sample - loss: 0.5318 - accuracy: 0.7643 - val_loss: 0.4469 - val_accuracy: 0.7910\n",
+            "Epoch 2/10\n",
+            "48230/48230 [==============================] - 13s 261us/sample - loss: 0.4717 - accuracy: 0.7784 - val_loss: 0.4263 - val_accuracy: 0.8043\n",
+            "Epoch 3/10\n",
+            "48230/48230 [==============================] - 13s 265us/sample - loss: 0.4599 - accuracy: 0.7792 - val_loss: 0.4372 - val_accuracy: 0.8026\n",
+            "Epoch 4/10\n",
+            "48230/48230 [==============================] - 13s 261us/sample - loss: 0.4543 - accuracy: 0.7796 - val_loss: 0.4400 - val_accuracy: 0.7989\n",
+            "Epoch 5/10\n",
+            "48230/48230 [==============================] - 13s 263us/sample - loss: 0.4505 - accuracy: 0.7826 - val_loss: 0.4129 - val_accuracy: 0.8132\n",
+            "Epoch 6/10\n",
+            "48230/48230 [==============================] - 13s 263us/sample - loss: 0.4477 - accuracy: 0.7830 - val_loss: 0.4165 - val_accuracy: 0.8060\n",
+            "Epoch 7/10\n",
+            "48230/48230 [==============================] - 13s 265us/sample - loss: 0.4448 - accuracy: 0.7850 - val_loss: 0.4611 - val_accuracy: 0.7763\n",
+            "Epoch 8/10\n",
+            "48230/48230 [==============================] - 13s 264us/sample - loss: 0.4414 - accuracy: 0.7852 - val_loss: 0.4100 - val_accuracy: 0.8099\n",
+            "Epoch 9/10\n",
+            "48230/48230 [==============================] - 13s 264us/sample - loss: 0.4384 - accuracy: 0.7873 - val_loss: 0.4156 - val_accuracy: 0.8050\n",
+            "Epoch 10/10\n",
+            "48230/48230 [==============================] - 13s 269us/sample - loss: 0.4361 - accuracy: 0.7878 - val_loss: 0.4456 - val_accuracy: 0.7787\n",
+            "Model: \"sequential_2\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "dense_8 (Dense)              multiple                  660       \n",
+            "_________________________________________________________________\n",
+            "dense_9 (Dense)              multiple                  55        \n",
+            "_________________________________________________________________\n",
+            "dense_10 (Dense)             multiple                  12        \n",
+            "_________________________________________________________________\n",
+            "dense_11 (Dense)             multiple                  3         \n",
+            "=================================================================\n",
+            "Total params: 730\n",
+            "Trainable params: 730\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n",
+            "None\n",
+            "Training Accuracy:  0.790\n",
+            "Testing Accuracy:  0.779\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
