--- a/code/3_prediction.ipynb
+++ b/code/3_prediction.ipynb
@@ -1381,7 +1381,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### 2.5 Grid search for GradientBoosting, KNN, LogisticR, DecisionT, MLP, Xgboost,"
+        "### 2.6 Grid search for GradientBoosting, KNN, LogisticR, DecisionT, MLP, Xgboost"
       ]
     },
     {
@@ -1854,7 +1854,7 @@
         "colab_type": "text"
       },
       "source": [
-        "###2.6 To show the important variables"
+        "###2.7 To show the important variables"
       ]
     },
     {
@@ -1912,7 +1912,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### 2.7 Voting ensemble\n"
+        "### 2.8 Voting ensemble\n"
       ]
     },
     {
@@ -1962,7 +1962,7 @@
         "colab_type": "text"
       },
       "source": [
-        "###2.8 Show the confusion matrix and other scores"
+        "###2.9 Show the confusion matrix and other scores"
       ]
     },
     {
@@ -2055,7 +2055,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### 2.9 Neural Network"
+        "### 2.10 Neural Network using Keras"
       ]
     },
     {
