--- a/code/1_augmentation.ipynb
+++ b/code/1_augmentation.ipynb
@@ -3,10 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "2_augmentation.ipynb",
+      "name": "1_augmentation.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -22,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# 0. Imports"
+        "# **0. Imports**"
       ]
     },
     {
@@ -113,7 +112,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# 1. Augmentation using the original dataframe"
+        "# **1. Augmentation using the original dataframe**"
       ]
     },
     {
@@ -123,7 +122,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### 1.1 Temporal information"
+        "### **1.1 Temporal information**"
       ]
     },
     {
@@ -141,11 +140,11 @@
       "metadata": {
         "id": "dr-jcqYum5do",
         "colab_type": "code",
+        "outputId": "a446f9ec-7eb0-4c63-f050-60a1f63b2fb3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 348
-        },
-        "outputId": "78171cda-c9f3-4562-fcb1-0c50f831f14c"
+          "height": 355
+        }
       },
       "source": [
         "# Extract week day, month and year from inspection date\n",
@@ -153,7 +152,7 @@
         "df[\"Month\"] = pd.DatetimeIndex(df['Inspection Date']).month\n",
         "df[\"Weekday\"] = pd.DatetimeIndex(df['Inspection Date']).dayofweek"
       ],
-      "execution_count": 712,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -188,7 +187,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### 1.2 \"Violations\" column"
+        "### **1.2 \"Violations\" column**"
       ]
     },
     {
@@ -206,17 +205,17 @@
       "metadata": {
         "id": "tJumnANQ9iK3",
         "colab_type": "code",
+        "outputId": "02ce71af-5167-42bd-ee5c-b47cdca4b648",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 127
-        },
-        "outputId": "5a102f90-cbc0-487a-d955-d1987308059a"
+          "height": 130
+        }
       },
       "source": [
         "# Replace NaN cells with \"X\"\n",
         "df[\"Violations\"] = df[\"Violations\"].replace(np.nan, 'X', regex=True)"
       ],
-      "execution_count": 713,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -258,17 +257,17 @@
       "metadata": {
         "id": "f4tNdE2qQnWY",
         "colab_type": "code",
+        "outputId": "6b465254-51cd-4f05-a473-1c17e5e6aab0",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 127
-        },
-        "outputId": "ed595ebd-6e6c-465d-e97a-d3821ed81361"
+          "height": 130
+        }
       },
       "source": [
         "# Update the DF\n",
         "df[\"LenViol\"] = lenOfViolations"
       ],
-      "execution_count": 715,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -299,17 +298,17 @@
       "metadata": {
         "id": "pL6JIuJZb-Qh",
         "colab_type": "code",
+        "outputId": "596e28e4-0780-40f2-d5ec-68bfb637b304",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
-        },
-        "outputId": "0d2a16ae-8e8b-4e57-d064-75e996923171"
+        }
       },
       "source": [
         "# Verifiy the assumption\n",
         "df[[\"Results\", \"LenViol\"]].groupby(\"Results\").mean()"
       ],
-      "execution_count": 716,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -363,7 +362,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 716
+          "execution_count": 12
         }
       ]
     },
@@ -374,7 +373,7 @@
         "id": "qW85BMKlJUnD"
       },
       "source": [
-        "# 2. Augmentation using the NOAA Weather history"
+        "# **2. Augmentation using the NOAA Weather history**"
       ]
     },
     {
@@ -420,17 +419,17 @@
       "metadata": {
         "id": "ksYQoweapbfo",
         "colab_type": "code",
-        "outputId": "ee58790f-fd7c-4748-ab2a-2b4c81240368",
+        "outputId": "f23563c1-f41f-4099-af3f-b66dd113121a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 127
+          "height": 130
         }
       },
       "source": [
         "# Compute the mean maximum temparture over the last 3 days for each day.\n",
         "df_weather_zip[\"MeanMaxTemp3Days\"] = (1.0/3.0)*(df_weather_zip.TMAX.shift(1) + df_weather_zip.TMAX.shift(2) + df_weather_zip.TMAX.shift(3))"
       ],
-      "execution_count": 719,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -451,7 +450,7 @@
       "metadata": {
         "id": "u1-1JYrepc0q",
         "colab_type": "code",
-        "outputId": "fc0687b8-1baa-4f83-89ee-d1a588d7b9a0",
+        "outputId": "4723efdf-501f-4161-f431-dfe646d62538",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 363
@@ -462,7 +461,7 @@
         "# which corresponds to 1/3 * (TMAX(2009-12-15) + TMAX(2009-12-16) + TMAX(2009-12-17)) = MeanMaxTemp3Days(2009-12-18)\n",
         "df_weather_zip.head(10)"
       ],
-      "execution_count": 720,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -573,7 +572,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 720
+          "execution_count": 16
         }
       ]
     },
@@ -582,17 +581,17 @@
       "metadata": {
         "id": "oMbncJ1FqCX_",
         "colab_type": "code",
-        "outputId": "fa1d1cad-29f3-4497-f1a1-50120e47ce10",
+        "outputId": "a93b64b7-bac2-4995-ac9e-2fcce6803629",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 127
+          "height": 130
         }
       },
       "source": [
         "# Date conversion\n",
         "df_weather_zip[\"DATE\"] =  pd.to_datetime(df_weather_zip[\"DATE\"])"
       ],
-      "execution_count": 721,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -613,17 +612,17 @@
       "metadata": {
         "id": "bYc56zFtu5aY",
         "colab_type": "code",
-        "outputId": "a74452a5-b70d-4fe9-8389-f6e5a277e803",
+        "outputId": "529a1f47-7169-4ba9-8829-6d9a413ef2d2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 424
+          "height": 423
         }
       },
       "source": [
         "# End result\n",
         "df_weather_zip"
       ],
-      "execution_count": 722,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -744,7 +743,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 722
+          "execution_count": 18
         }
       ]
     },
@@ -779,7 +778,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# 3. Augmentation using the \"Business Licenses\" data set"
+        "# **3. Augmentation using the \"Business Licenses\" data set**"
       ]
     },
     {
@@ -797,17 +796,17 @@
       "metadata": {
         "id": "AemOnNNQsJAQ",
         "colab_type": "code",
-        "outputId": "8ce8e32d-5bdf-4a94-87ab-0867777ffe35",
+        "outputId": "4a2dc15d-f92e-48b5-ca33-57e7b3bc8a24",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 54
+          "height": 75
         }
       },
       "source": [
         "# Load data set\n",
         "df_licenses = pd.read_csv(\"https://drive.switch.ch/index.php/s/HUOmc3Db1dJ9WMh/download\")"
       ],
-      "execution_count": 724,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -824,17 +823,17 @@
       "metadata": {
         "id": "jHWgO2nij9z4",
         "colab_type": "code",
-        "outputId": "3de7b3e8-b2e4-428e-f139-48483bc48120",
+        "outputId": "731afbaf-6c2d-4bb9-92a2-469492ac232a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 81
+          "height": 80
         }
       },
       "source": [
         "# Sample\n",
         "df_licenses[[\"LICENSE NUMBER\", \"APPLICATION REQUIREMENTS COMPLETE\", \"DATE ISSUED\"]].sample(1)"
       ],
-      "execution_count": 725,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -865,10 +864,10 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>225365</th>\n",
-              "      <td>2240816.0</td>\n",
-              "      <td>01/16/2015</td>\n",
-              "      <td>02/13/2015</td>\n",
+              "      <th>878463</th>\n",
+              "      <td>62686.0</td>\n",
+              "      <td>12/20/2001</td>\n",
+              "      <td>04/08/2002</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -876,13 +875,13 @@
             ],
             "text/plain": [
               "        LICENSE NUMBER APPLICATION REQUIREMENTS COMPLETE DATE ISSUED\n",
-              "225365       2240816.0                        01/16/2015  02/13/2015"
+              "878463         62686.0                        12/20/2001  04/08/2002"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 725
+          "execution_count": 21
         }
       ]
     },
@@ -931,7 +930,7 @@
       "metadata": {
         "id": "vOzDSAZexYun",
         "colab_type": "code",
-        "outputId": "db546dcd-0ec3-4f4f-aa38-a309aa17c50e",
+        "outputId": "573a4d3a-c6ca-46e1-da37-72ab276b62df",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 170
@@ -940,7 +939,7 @@
       "source": [
         "df[df[\"Inspection ID\"] == 154341]"
       ],
-      "execution_count": 728,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1024,7 +1023,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 728
+          "execution_count": 24
         }
       ]
     },
@@ -1111,17 +1110,16 @@
       "metadata": {
         "id": "pKPN2485jXGE",
         "colab_type": "code",
-        "outputId": "0715bfd7-c0ed-4929-fc47-f8f0be9d1d52",
+        "outputId": "9fa44fdd-a9ec-4575-be67-6e9dddb338ee",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 175
+          "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "df_show = df_licenses[[\"LICENSE NUMBER\", \"APPLICATION TYPE\", \"APPLICATION REQUIREMENTS COMPLETE\", \"DATE ISSUED\"]]\n",
         "df_show[df_show[\"LICENSE NUMBER\"] == 2208682]"
       ],
-      "execution_count": 733,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1197,7 +1195,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 733
+          "execution_count": 29
         }
       ]
     },
@@ -1232,7 +1230,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# 4. Export"
+        "# **4. Export**"
       ]
     },
     {
